--- a/index.html
+++ b/index.html
@@ -23,62 +23,62 @@
   </thead>
   <tbody>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/maleicon.png" alt="" /></td>
       <td colspan="2">Braukmann, James</td>
       <td>DESN350: 10:00-11:50</td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/blue-officehour.png" alt="" /></td>
     </tr>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/femaleicon.png" alt="" /></td>
       <td colspan="2">Breen, Mindy</td>
       <td>None</td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/red-unavailable.png" alt="" /></td>
     </tr>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/maleicon.png" alt="" /></td>
       <td colspan="2">Couraud, Tom</td>
       <td>DESN216: 8:00-9:50<br>
           Office: 11:00-12:00<br>
           DESN216: 1:00-2:50
       </td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/purple-inclass.png" alt="" /></td>
     </tr>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/femaleicon.png" alt="" /></td>
       <td colspan="2">Hustrulid, Ginelle</td>
       <td>Office: 11:00-12:00<br>
           DESN243: 3:00-4:50<br>
       </td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/purple-inclass.png" alt="" /></td>
     </tr>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/maleicon.png" alt="" /></td>
       <td colspan="2">Jorgensen, Donald</td>
       <td>DESN263: 10:00-12:30<br>
           Office: 12:30-3:00
       </td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/blue-officehour.png" alt="" /></td>
     </tr>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/maleicon.png" alt="" /></td>
       <td colspan="2">Manikoth, P. Colin</td>
       <td>Office: 11:00-12:00<br>
           DESN480: 3:00-4:50</td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/purple-inclass.png" alt="" /></td>
     </tr>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/maleicon.png" alt="" /></td>
       <td colspan="2">Masingale, Travis</td>
       <td>DESN259: 8:00-9:50<br>
           Office: 10:00-11:30
       </td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/red-unavailable.png" alt="" /></td>
     </tr>
     <tr>
-      <td><img src="http://placehold.it/50x50" alt="" /></td>
+      <td><img src="img/maleicon.png" alt="" /></td>
       <td colspan="2">Rodriguez-Marek, Esteban</td>
       <td>Office: 9:30-11:00</td>
-      <td><img src="http://placehold.it/35x35" alt="" /></td>
+      <td><img src="img/red-unavailable.png" alt="" /></td>
     </tr>
   </tbody>
 </table>
