--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   </head>
   <body>
 <div class="row">
- <table class="whitetext">
-  <thead class="whitetext">
+ <table>
+  <thead>
     <tr>
       <th>Monday</th>
       <th colspan="2">Instructor</th>
@@ -21,7 +21,7 @@
       <th>Status</th>
     </tr>
   </thead>
-  <tbody class="whitetext">
+  <tbody>
     <tr>
       <td><img src="img/maleicon.png" alt="" /></td>
       <td colspan="2">Braukmann, James</td>
