--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <td>DESN216: 8:00-9:50<br>
           TECH393: 10:00-10:50<br>
           Office: 11:00-12:00<br>
-          DESN216/TECH550: 1:00-2:50
+          DESN216: 1:00-2:50
       </td>
       <td><img src="img/purple-inclass.png" alt="" /></td>
     </tr>
